Edited routes and added new style

--- a/src/components/CandidatePage/CandidatePage.css
+++ b/src/components/CandidatePage/CandidatePage.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     padding: 2em;
+    height: calc(100vh - 90px - 2em);
 }
 .info-box{
     display: flex;
@@ -50,3 +51,4 @@ td{
    
    
 }
+
