--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,9 @@
 .footer{
-    background-color: black;
-    padding: 3em;
-    margin-top: 1em;
+    padding: 2em;
     color: gray;
+    text-align: center;
+    background-color:rgb(51, 51, 51);
+    _position: fixed;
+    _bottom: 0;
+    _width: 100%;
 }
