--- a/src/components/InfoSection/InfoSection.css
+++ b/src/components/InfoSection/InfoSection.css
@@ -1,15 +1,45 @@
 .image img {
     height: 200px;
     width: 200px;
-    
+    padding: 50px 50px 50px;
+    filter: drop-shadow(2px 4px 8px #55534a); 
 }
 
 .image {
     display: flex;
     justify-content: center;
     align-items: center;
+    
+}
+
+.circlar-frame {
+      /* padding: 0 50px 50px; 
+    margin-left:20px;
+    margin-right:20px; */
+    border-radius: 50%;
+    border: solid 5px  rgb(167, 162, 162);
+    background-color: white;
 }
 
 h2 {
     padding-bottom: 50px;
+    font-size: 32px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    /* overflow:hidden;
+    text-overflow:ellipsis; */
 }
+
+.title-p {
+    font-size: 22px;
+    color: rgb(102, 100, 100);
+}
+
+.gradient-border {
+    border: solid 4px transparent;
+    border-radius: 5px;
+    background-image: linear-gradient(rgb(245, 247, 148), white),
+    linear-gradient(315deg,#f3d295,#777676 50%, black );
+    background-origin: border-box ;
+    background-clip: content-box, border-box;
+   }
