--- a/src/components/InterviewTable/InterviewTable.css
+++ b/src/components/InterviewTable/InterviewTable.css
@@ -1,23 +1,57 @@
-.table {
+.interview-table {
+    border: 1px solid black;
+    border-collapse: collapse;
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+}
+
+.gradient-border-table {
+  border: solid 4px transparent;
+  border-radius: 5px;
+  background-image: linear-gradient(rgb(255, 255, 255), white),
+  linear-gradient(315deg,#f3d295,#777676 50%, black );
+  background-origin: border-box ;
+  background-clip: content-box, border-box;
+  height: 100%;
+  width: 100%;
+ }
+
+
+ @media (max-width: 768px) {
+  tbody {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
-    justify-items: center;
+    grid-template-columns: repeat(3, 1fr) repeat(2, 1fr) repeat(1, 1fr);
   }
-  
-  .row {
+}
+
+@media (max-width: 480px) {
+  tbody {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
+    grid-template-columns: repeat(3, 1fr) repeat(1, 1fr);
   }
-  
-  .column {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+}
+
+@media (max-width: 320px) {
+  tbody {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr) repeat(1, 1fr);
   }
+}
 
 th {
-    border: 1px solid black;
     padding: 0.5em;
  }
+
+.column-first {
+    width: 30%;
+ }
+
+.column-second {
+    width: 42%;
+ }
+
+.column-third {
+    width: 28%;
+}
+
