--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,9 +1,9 @@
 .footer{
+    position: fixed;
+    width: 100%;
+    bottom: 0;
     padding: 2em;
     color: gray;
     text-align: center;
     background-color:rgb(51, 51, 51);
-    _position: fixed;
-    _bottom: 0;
-    _width: 100%;
 }
