--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,6 +4,11 @@
     text-align: center;
     background-color:rgb(51, 51, 51);
     _position: fixed;
-    _bottom: 0;
-    _width: 100%;
+    _position: sticky;
+    bottom: 0;
+    width: 100%;
 }
+
+/* :target {
+    scroll-margin-bottom: 3em;
+} */
