--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -2,18 +2,18 @@
     display: block;
     position: fixed;
     z-index: 1;
-    width: 60%;
+    width: 50%;
     height: fit-content;
     overflow: auto;
     background-image: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(225, 224, 225, 1));
     display: flex;
     justify-content: center;
-    box-shadow: 0px 0px 20px rgba(18, 17, 17, 0.5);
+    box-shadow: 5px 5px 25px rgba(18, 17, 17, 0.8);
     flex-wrap: wrap;
 }
 
 .modal-box {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.72);
     width: 100%;
     height: 100%;
     display: block;
@@ -27,11 +27,15 @@
 }
 
 .headline {
-    border-bottom: 2px solid rgba(10, 10, 10, 0.283);
+    border-bottom: 2px solid rgb(222, 202, 151);
     display: flex;
     justify-content: space-between;
     width: 90%;
-    height: 20%;
+    margin-bottom: 1em;
+}
+
+.headline p {
+    font-size: 1.5em;
 }
 
 .close {
@@ -40,8 +44,12 @@
 }
 
 .icon-close {
-    color: rgb(51, 48, 49, 0.5);
+    _color: rgb(51, 48, 49, 0.5);
     size: '2xl';
+    color: rgb(222, 202, 151, 0.9);
+    border: 2px solid rgb(222, 202, 151, 0.9);
+    border-radius: 50%;
+    box-shadow: 2px 4px 8px rgb(51, 48, 49, 0.5);
 }
 
 .close:hover {
@@ -70,6 +78,11 @@
 }
 
 .title {
-    font-size: large;
-    font-weight: 600;
+    font-size: 1em;
+    color: rgb(51, 48, 49, 0.5);
+}
+.dates{
+    font-size: 1.5em;
+    margin-bottom: 0.5em;
+    padding: 0.2em 0;
 }
