--- a/src/components/InterviewTable/InterviewTable.css
+++ b/src/components/InterviewTable/InterviewTable.css
@@ -3,7 +3,6 @@
     border-collapse: collapse;
     margin: 0 auto;
     width: 100%;
-    height: 100%;
 }
 
 .gradient-border-table {
@@ -13,7 +12,6 @@
   linear-gradient(315deg,#f3d295,#777676 50%, black );
   background-origin: border-box ;
   background-clip: content-box, border-box;
-  height: 100%;
   width: 100%;
 }
 
@@ -66,5 +64,14 @@ th {
     width: 28%;
     border: 1px solid black;
     border-collapse: collapse;
+}
+.heading {
+  font-weight: 500;
+  color: rgba(240, 236, 237, 0.952);
+  font-size: 1.5em;
+  padding: 1em 0;
+  _height: 10px;
+  width: 100px;
+
 }
 
