--- a/src/components/Candidates/Candidates.css
+++ b/src/components/Candidates/Candidates.css
@@ -15,3 +15,14 @@
     justify-content: center;
     _margin-top: 2em;
 }
+
+.border {
+    width:160px;
+    height: 160px;
+    border-radius: 50%;
+    border: 8px solid rgb(222, 202, 151);
+    padding: 1.5em;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    align-items: center;
+}
