Made Reports page and conected with router plus mad e some style

--- a/src/components/CandidateCard/CandidateCard.css
+++ b/src/components/CandidateCard/CandidateCard.css
@@ -16,7 +16,7 @@
      display: flex;
      flex-wrap: wrap;
      justify-content: center;
-     height: 310px;
+     height: 290px;
  }
 
 .card h3{
@@ -24,6 +24,7 @@
     color: rgb(55, 55, 55);
     text-align: center;
     font-weight: 900;
+    margin-top: 0.5em;
 }
 
 .email p{
@@ -32,5 +33,5 @@
 }
 
 .email {
-    margin-top:-20px;
+    margin-top:0.5em;
 }
