--- a/src/components/Reports/ReportsHeader/ReportsHeader.css
+++ b/src/components/Reports/ReportsHeader/ReportsHeader.css
@@ -1,4 +1,4 @@
-.header {
+.reports-header {
     display: flex;
     justify-content: space-between;
     padding: 1em 2em;
@@ -9,6 +9,7 @@
 
 .button {
     background-color: rgb(51, 48, 49, 0.5);
+    padding: 0em 2.5em;
     height: 3em;
     color: white;
     text-align: center;
@@ -16,9 +17,9 @@
     border: 2px solid grey;
     cursor: pointer;
     font-weight: bold;
-    width: 10em;
+    width: 12em;
 }
-    
+
 .button:hover {
     background-color: white;
     color: grey;
@@ -31,4 +32,8 @@
     flex-wrap: wrap;
     gap: 1em;
     justify-content: flex-end;
+}
+
+.reports-header h1 {
+    cursor: pointer;
 }
