--- a/src/components/Candidates/Candidates.css
+++ b/src/components/Candidates/Candidates.css
@@ -17,3 +17,13 @@
     gap: 2em;
     justify-content: center;
 }
+.border {
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    border: 8px solid rgb(222, 202, 151);
+    padding: 1.5em;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    align-items: center;
+}
