--- a/src/components/Reports/Search/Search.css
+++ b/src/components/Reports/Search/Search.css
@@ -14,7 +14,7 @@
     margin-bottom: 1em;
 }
 
-.input input {
+#reports {
     background-color: rgb(255, 255, 255);
     outline-color: rgb(255, 255, 255, 1);
     outline-offset: 0.1em;
