--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -4,7 +4,6 @@
     justify-content: space-between;
     color: rgb(255, 255, 255, 0.9);
     border-bottom: 2px solid rgb(255, 255, 255, 0.3);
-    _height: 25%;
     padding-top: 2em;
     align-items: center;
     padding-bottom: 1em;
@@ -23,11 +22,11 @@
 }
 
 .input input:focus {
-    _background-color: rgb(222, 202, 151);
     background-color: rgb(255, 255, 255);
     outline-color: rgb(255, 255, 255, 1);
     outline-offset: 0.1em;
     color: gray;
+    caret-color: rgb(222, 202, 151);
 }
 
 .input .icon {
@@ -41,3 +40,12 @@
 h2{
     padding-bottom: 0px;
 }
+
+input[type="search"]::-webkit-search-cancel-button {
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+}
+
+
+
+    
