--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,10 @@
 .footer{
-    padding: 2em;
+    /* padding: 2em; */
+    height: 5em;
     color: gray;
     text-align: center;
     background-color:rgb(51, 51, 51);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
