--- a/src/components/SingleCandidate/SingleCandidate.css
+++ b/src/components/SingleCandidate/SingleCandidate.css
@@ -5,7 +5,7 @@
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
             url("//images01.nicepage.com/a1389d7bc73adea1e1c1fb7e/f2c376d77b44586bac314967/pexels-photo-6619243.jpeg?version=") no-repeat center center fixed;
     background-size: cover;
-    min-height: 100vh;
+    min-height: calc(100vh - 5em - 5em); 
 }
 
 .table{
