--- a/src/components/Reports/Reports.css
+++ b/src/components/Reports/Reports.css
@@ -8,6 +8,7 @@
     flex-wrap: wrap;
     justify-content: center;
     background-color: rgb(222, 202, 151);
+    min-height: calc(100vh - 5em - 5em);
 }
 
 .report-box {
