--- a/src/components/Reports/ReportsHeader/ReportsHeader.css
+++ b/src/components/Reports/ReportsHeader/ReportsHeader.css
@@ -1,10 +1,11 @@
 .reports-header {
     display: flex;
     justify-content: space-between;
-    padding: 1em 2em;
+    padding: 0em 2em;
     display: flex;
     background-image: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(225, 224, 225, 0.5));
     align-items: center;
+    height: 5em;
 }
 
 .button {
