--- a/src/components/Reports/Reports.css
+++ b/src/components/Reports/Reports.css
@@ -9,6 +9,7 @@
     justify-content: center;
     background-color: rgb(222, 202, 151);
     min-height: calc(100vh - 5em - 5em);
+    align-items: flex-start;
 }
 
 .report-box {
@@ -20,7 +21,7 @@
     align-items: center;
     background-color: rgba(255, 255, 255, 1);
     border-radius: 0.2em;
-    max-height: 50px;
+    height: 50px;
 }
 
 .box1 {
@@ -68,4 +69,6 @@ h3 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding-top: 1em;
+   
 }
