--- a/src/components/InterviewTable/InterviewTable.css
+++ b/src/components/InterviewTable/InterviewTable.css
@@ -6,13 +6,14 @@
 }
 
 .gradient-border-table {
-  border: solid 4px transparent;
-  border-radius: 5px;
+  border: solid 5px transparent;
+  border-radius: 6px;
   background-image: linear-gradient(rgb(255, 255, 255), white),
   linear-gradient(315deg,#f3d295,#777676 50%, black );
   background-origin: border-box ;
   background-clip: content-box, border-box;
   width: 100%;
+  /* overflow-x: auto;  */
 }
 
 .row-first{
@@ -22,26 +23,35 @@
 .odd-row{
   background-color:rgb(51, 48, 49, 0.1);
 }
-
-/* @media (min-width: 1024px) {
+/* 
+@media (min-width: 1024px) {
   tbody {
     grid-template-columns: repeat(3, 1fr) repeat(2, 1fr) repeat(1, 1fr);
   }
-} */
-/* 
+} 
+
 @media (min-width: 768px) {
   td {
     display: grid;
     grid-template-columns: repeat(3, 1fr) repeat(1, 1fr);
   }
-} */
-/*
-@media (max-width: 767x) {
-  tbody {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr) repeat(1, 1fr);
+}  */
+
+@media (max-width: 767px) {
+  .gradient-border-table {
+    display: block;
+    max-width: fit-content;
+    width: 100% !important;
+    margin: 0 auto;
+    overflow-x: scroll;
+    white-space: nowrap; 
+    scrollbar-color: purple;
   }
-} */
+}
+
+body::-webkit-scrollbar-track {
+  background: orange;        /* color of the tracking area */
+}
 
 th {
     padding: 0.5em;
@@ -65,6 +75,7 @@ th {
     border: 1px solid black;
     border-collapse: collapse;
 }
+
 .heading {
   font-weight: 500;
   color: rgba(240, 236, 237, 0.952);
