--- a/src/components/SingleCandidate/SingleCandidate.css
+++ b/src/components/SingleCandidate/SingleCandidate.css
@@ -1,7 +1,7 @@
 .container{
     /* display: flex; */
     flex-wrap: wrap;
-    padding: 4em;
+    padding: 4em 2em;
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
             url("//images01.nicepage.com/a1389d7bc73adea1e1c1fb7e/f2c376d77b44586bac314967/pexels-photo-6619243.jpeg?version=") no-repeat center center fixed;
     background-size: cover;
